; ModuleID = '/home/carl/AnghaBench/git/extr_fast-import.c_make_fast_import_path.c'
source_filename = "/home/carl/AnghaBench/git/extr_fast-import.c_make_fast_import_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@relative_marks_paths = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"info/fast-import/%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @make_fast_import_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @make_fast_import_path(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i32, i32* @relative_marks_paths, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %6, label %10

6:                                                ; preds = %1
  %7 = load i8*, i8** %3, align 8
  %8 = call i64 @is_absolute_path(i8* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %6, %1
  %11 = load i8*, i8** %3, align 8
  %12 = call i8* @xstrdup(i8* %11)
  store i8* %12, i8** %2, align 8
  br label %16

13:                                               ; preds = %6
  %14 = load i8*, i8** %3, align 8
  %15 = call i8* @git_pathdup(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i8* %14)
  store i8* %15, i8** %2, align 8
  br label %16

16:                                               ; preds = %13, %10
  %17 = load i8*, i8** %2, align 8
  ret i8* %17
}

declare dso_local i64 @is_absolute_path(i8*) #1

declare dso_local i8* @xstrdup(i8*) #1

declare dso_local i8* @git_pathdup(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
